[package]
name = "rust-ecosystem-learning"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
blake3 = "1.8.2"
bytes = "1.10.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
